syntax = "proto3";
package factset.protobuf.stach.v2.table;

option csharp_namespace = "FactSet.Protobuf.Stach.V2.Table";
option go_package = "github.com/factset/stachschema/go/fds/protobuf/stach/v2/table";
option java_package = "com.factset.protobuf.stach.v2.table";
option java_outer_classname = "TableDefinitionProto";

import "fds/protobuf/stach/v2/table/ColumnDefinition.proto";

// A table definition
message TableDefinition {
  // The id of the headers table
  string header_table_id = 1;

  // The array of column definitions
  repeated ColumnDefinition columns = 2;
}